# Quiry

./: .env.example  .gitignore  CLAUDE.md  KAFKA_SETUP.md  README.md  docker-compose.yml  ingest.py  main.py  prometheus.yml  requirements.txt  run-services.sh  search.py  setup-kafka.sh  setup_qdrant.py  start-consumer.sh
grafana/dashboards/: quiry-overview.json
grafana/provisioning/dashboards/: dashboards.yml
main/: Cargo.toml  bot.py  database.py  retrieval.py  testing.py
main/src/: chunking.rs  cohere.rs  config.rs  elasticsearch.rs  handler.rs  health.rs  kafka_consumer.rs  kafka_producer.rs  kafka_types.rs  lib.rs  main.rs  metrics.rs  pinecone.rs  schema.rs
migrations/: 0001_init.sql
