[package]
name = "Quiry"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", features = ["framework", "standard_framework", "client", "gateway", "rustls_backend"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dotenv = "0.15"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
