[package]
name = "Quiry"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", features = ["framework", "standard_framework", "client", "gateway", "rustls_backend"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dotenv = "0.15"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Kafka dependencies
rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored"] }
futures = "0.3"

# ElasticSearch dependencies
# Using reqwest for simple HTTP requests to ElasticSearch

# Metrics and observability
prometheus = "0.13"
lazy_static = "1.4"
warp = "0.3"

[[bin]]
name = "consumer"
path = "src/bin/consumer.rs"

[[bin]]
name = "indexer"
path = "src/bin/indexer.rs"

[[bin]]
name = "metrics_server"
path = "src/bin/metrics_server.rs"

